*SVN*

* Fixed require of bluecloth and redcloth when gems haven't been loaded #4446 [murphy@cYcnus.de]

* Update to Prototype 1.5.0_pre1 [Sam Stephenson]

* Change #form_for and #fields_for so that the second argument is not required [Dave Thomas]

    <% form_for :post, @post, :url => { :action => 'create' } do |f| -%>
    
  becomes...
  
    <% form_for :post, :url => { :action => 'create' } do |f| -%>

* Update to script.aculo.us 1.6 [Thomas Fuchs]

* Enable application/x-yaml processing by default [Jamis Buck]

* Fix double url escaping of remote_function. Add :escape => false option to ActionView's url_for. [Nicholas Seckar]

* Add :script option to in_place_editor to support evalScripts (closes #4194) [codyfauser@gmail.com]

* Fix mixed case enumerable methods in the JavaScript Collection Proxy (closes #4314) [codyfauser@gmail.com]

* Undo accidental escaping for mail_to; add regression test. [Nicholas Seckar]

* Added nicer message for assert_redirected_to (closes #4294) [court3nay]

    assert_redirected_to :action => 'other_host', :only_path => false
    
  when it was expecting...
  
    redirected_to :action => 'other_host', :only_path => true, :host => 'other.test.host'
  
  gives the error message...

    response is not a redirection to all of the options supplied (redirection is <{:only_path=>false, :host=>"other.test.host", :action=>"other_host"}>), difference: <{:only_path=>"true", :host=>"other.test.host"}>

* Change url_for to escape the resulting URLs when called from a view. [Nicholas Seckar, coffee2code]

* Added easy support for testing file uploads with fixture_file_upload #4105 [turnip@turnipspatch.com]. Example:

    # Looks in Test::Unit::TestCase.fixture_path + '/files/spongebob.png'
    post :change_avatar, :avatar => fixture_file_upload('/files/spongebob.png', 'image/png')

* Fixed UrlHelper#current_page? to behave even when url-escaped entities are present #3929 [jeremy@planetargon.com]
